src/objects/Activity__c.object
<CustomObject>
    <description>use for Musqot application setting</description>
    <fields>
        <fullName>Company_holidays__c</fullName>
        <inlineHelpText>This should be a semicolon separate list
DD-MM-YYYY, DD-MM-YYYY, DD-MM-YYYY, MM-DD-YYYY</inlineHelpText>
        <label>Company holidays</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drag_to_change_date_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drag to change date_Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drag_to_change_date_Main__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drag to change date_Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forcasting_period__c</fullName>
        <label>Forcasting period</label>
        <picklist>
            <picklistValues>
                <fullName>Quarter</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incl_Marketing_activity_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incl Marketing activity_Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incl_Marketing_activity_Main__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incl Marketing activity_Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incl_Milestone_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incl Milestone_Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incl_Milestone_Main__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incl Milestone_Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incl_Task_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incl Task_Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incl_Task_main_gantt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incl Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_milestone_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance milestone_Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_access_controll__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked then you need to defined all user who should have access to each Plan</inlineHelpText>
        <label>Plan access controll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Finance1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Forcasting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Forcasting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Performance_CRM__c</fullName>
        <label>Use CRM Performance</label>
        <picklist>
            <picklistValues>
                <fullName>Not used</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce (outside Musqot org)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other CRM system</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Performance_ERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use ERP Performance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for control of spent hours in maketing</description>
        <label>Use Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_milestones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use milestones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_socialmedia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Socialmedia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>keycode__c</fullName>
        <label>keycode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Musqot setting</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Musqot setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>